# inky

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: builtin.cpp  builtin.h  core.h  either.h  environment.cpp  environment.h  eval.cpp  eval.h  parser.cpp  parser.h  parser_t.h  repl.cpp  repl.h  types.h  unicode.h  value.cpp  value.h  value_t.h
prelude/: README.md  prelude.l  prelude.lsp
prelude/src/: example_1.lsp  prelude.lsp
repl/: CMakeLists.txt
repl/src/: repl.cpp  repl.h  shell.cpp
shell/: CMakeLists.txt
shell/src/: inky_sh.cpp
test/: CMakeLists.txt
test/src/: eval_tests.cpp  list_builtin_tests.cpp  parser_tests.cpp  test.cpp  test_util.h  test_utils.cpp
